--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/header') %>
-  <body class="p-3 m-0 border-0 bd-example m-0 border-0">
+  <body >
     <header>
       <ul class="nav">
         <a href="/landingpage" class="nav-link" aria-current="page"
