--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,3 +12,15 @@
      
    
   </head>
+  <body>
+  <header>
+    <img id="logo" src="./assets/images/LogoMuskNite.png" alt="Logo" />
+    <nav>
+      <ul>
+        <li class="active"><a href="/main">Home</a></li>
+        <li><a href="/decklist">Deck</a></li>
+        <li><a href="/index">+Draw</a></li>
+      </ul>
+    </nav>
+    <a href="/landingpage" class="logout-button"><i class="fa-solid fa-right-from-bracket"></i></a>
+  </header>
